--- a/index.html
+++ b/index.html
@@ -6,31 +6,132 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
-	<nav class="navbar">
-	  <div class="container-fluid">
-	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-	        <span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	      </button>
-	      <a class="navbar-brand" href="#">Brand</a>
-	    </div>
-	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	      <ul class="nav navbar-nav navbar-right">
-	        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-	        <li><a href="#">Link</a></li>
-	      </ul>
-	    </div><!-- /.navbar-collapse -->
-	  </div><!-- /.container-fluid -->
-	</nav>
-	<header class="intro">
-		
+<body data-spy="scroll" data-target=".navbar" data-offset="100">
+	<header>
+		<nav class="navbar">
+		  <div class="container-fluid">
+		    <div class="navbar-header">
+		      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+		        <span class="sr-only">Toggle navigation</span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		      </button>
+		      <a class="navbar-brand" href="#">Brand</a>
+		    </div>
+		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		      <ul class="nav navbar-nav navbar-right">
+		        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+		        <li><a href="#">Link</a></li>
+		      </ul>
+		    </div><!-- /.navbar-collapse -->
+		  </div><!-- /.container-fluid -->
+		</nav>
 	</header>
+	<section id="intro" class="intro">
+		<div class="overlay"></div>
+		<div class="hero text-center">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-8 col-md-offset-2 col-sm-12">
+						<h1>The Beatles</h1>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam natus dolorum at atque enim suscipit quidem voluptate, debitis neque dignissimos quo quasi consequatur mollitia recusandae officia maiores obcaecati. Doloribus, deserunt?</p>						
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section id="reseña" class="pd">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6 col-xs-12">
+					<h3 class="heading">Reseña</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum</p>
+				</div>
+				<div class="col-md-6 col-xs-12">
+					<img class="img-responsive img-circle" src="img/bt-uno.jpg" alt="the beatles">
+				</div>
+			</div>
+		</div>
+	</section>
+	<section id="conocer" class="pd bg">
+		<div class="container">
+			<h2 class="heading">Meet The Beatles</h2>
+			<div class="row disc-row">
+				<div class="col-sm-6">
+					<h3 class="heading">Ellos</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum</p>
+				</div>
+				<div class="col-sm-6">
+					<img class="img-responsive img-circle" src="img/john.png" alt="the beatles">
+				</div>
+			</div>
+			<div class="row disc-row">
+				<div class="col-sm-6">
+					<h3 class="heading">Ellos</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum</p>
+				</div>
+				<div class="col-sm-6">
+					<img class="img-responsive img-circle" src="img/paul.jpg" alt="the beatles">
+				</div>
+			</div>
+			<div class="row disc-row">
+				<div class="col-sm-6">
+					<h3 class="heading">Ellos</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum</p>
+				</div>
+				<div class="col-sm-6">
+					<img class="img-responsive img-circle" src="img/george.jpg" alt="the beatles">
+				</div>
+			</div>
+			<div class="row disc-row">
+				<div class="col-sm-6">
+					<h3 class="heading">Ellos</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum</p>
+				</div>
+				<div class="col-sm-6">
+					<img class="img-responsive img-circle" src="img/ringo.jpg" alt="the beatles">
+				</div>
+			</div>
+		</div>
+	</section>
+	<section id="album" class="pd">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<h3 class="heading">Ellos</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum</p>
+				</div>
+			</div>
+			<div class="row disc-row">
+				<div class="col-sm-4"><img class="img-responsive" src="img/please-me.jpg" alt="Please me"></div>
+				<div class="col-sm-4"><img class="img-responsive" src="img/with-beatles.jpg" alt="With The Beatles"></div>
+				<div class="col-sm-4"><img class="img-responsive" src="img/hard-days.jpg" alt="A hard days night"></div>
+			</div>
+			<div class="row disc-row">
+				<div class="col-sm-4"><img class="img-responsive" src="img/beatles-sale.jpg" alt="beatles for sale"></div>
+				<div class="col-sm-4"><img class="img-responsive" src="img/help.jpg" alt="Help"></div>
+				<div class="col-sm-4"><img class="img-responsive" src="img/rubber.jpg" alt="Rubber Soul"></div>
+			</div>
+			<div class="row disc-row">
+				<div class="col-sm-4"><img class="img-responsive" src="img/revolver.jpg" alt="Revolver"></div>
+				<div class="col-sm-4"><img class="img-responsive" src="img/peppers.jpg" alt="Lonely Hearts Club Band"></div>
+				<div class="col-sm-4"><img class="img-responsive" src="img/magical.jpg" alt="Magical Mystery Tour"></div>
+			</div>
+			<div class="row disc-row">
+				<div class="col-sm-4"><img class="img-responsive" src="img/white.jpg" alt="The White Album"></div>
+				<div class="col-sm-4"><img class="img-responsive" src="img/yellow.jpg" alt="Yellow Submarine"></div>
+				<div class="col-sm-4"><img class="img-responsive" src="img/abbey.jpg" alt="Abbey Road"></div>
+			</div>
+			<div class="row disc-row">
+				<div class="col-sm-4 col-sm-offset-4"><img class="img-responsive" src="img/let-it-be.jpg" alt="Let it Be"></div>
+				<!-- <div class="col-sm-4"><img class="img-responsive" src="img/let-it-be.jpg" alt="Let it Be"></div> -->
+			</div>
+		</div>
+	</section>
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 </body>
