imagenes de integrantes

--- a/index.html
+++ b/index.html
@@ -51,9 +51,6 @@
 					<h3 class="heading">Reseña</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum</p>
 				</div>
-				<div class="col-md-6 col-xs-12">
-					<img class="img-responsive img-circle" src="img/bt-uno.jpg" alt="the beatles">
-				</div>
 			</div>
 		</div>
 	</section>
@@ -66,7 +63,7 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum</p>
 				</div>
 				<div class="col-sm-6">
-					<img class="img-responsive img-circle" src="img/john.png" alt="the beatles">
+					<img class="img-responsive" src="img/john.png" alt="the beatles">
 				</div>
 			</div>
 			<div class="row disc-row">
@@ -75,7 +72,7 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum</p>
 				</div>
 				<div class="col-sm-6">
-					<img class="img-responsive img-circle" src="img/paul.jpg" alt="the beatles">
+					<img class="img-responsive" src="img/paul.png" alt="the beatles">
 				</div>
 			</div>
 			<div class="row disc-row">
@@ -84,7 +81,7 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum</p>
 				</div>
 				<div class="col-sm-6">
-					<img class="img-responsive img-circle" src="img/george.jpg" alt="the beatles">
+					<img class="img-responsive" src="img/george.png" alt="the beatles">
 				</div>
 			</div>
 			<div class="row disc-row">
@@ -93,7 +90,7 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum</p>
 				</div>
 				<div class="col-sm-6">
-					<img class="img-responsive img-circle" src="img/ringo.jpg" alt="the beatles">
+					<img class="img-responsive" src="img/ringo.png" alt="the beatles">
 				</div>
 			</div>
 		</div>
