--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link type="text/css" rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -32,13 +33,14 @@
 		</nav>
 	</header>
 	<section id="intro" class="intro">
-		<div class="overlay"></div>
-		<div class="hero text-center">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-8 col-md-offset-2 col-sm-12">
-						<h1>The Beatles</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam natus dolorum at atque enim suscipit quidem voluptate, debitis neque dignissimos quo quasi consequatur mollitia recusandae officia maiores obcaecati. Doloribus, deserunt?</p>						
+		<div class="overlay">
+			<div class="hero text-center">
+				<div class="container">
+					<div class="row">
+						<div class="col-md-8 col-md-offset-2 col-sm-12">
+							<h1>The Beatles</h1>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam natus dolorum at atque enim suscipit quidem voluptate, debitis neque dignissimos quo quasi consequatur mollitia recusandae officia maiores obcaecati. Doloribus, deserunt?</p>						
+						</div>
 					</div>
 				</div>
 			</div>
@@ -57,7 +59,7 @@
 	<section id="conocer" class="pd bg">
 		<div class="container">
 			<h2 class="heading">Meet The Beatles</h2>
-			<div class="row disc-row">
+			<div class="row pd-row">
 				<div class="col-sm-6">
 					<h3 class="heading">Ellos</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum</p>
@@ -66,7 +68,7 @@
 					<img class="img-responsive" src="img/john.png" alt="the beatles">
 				</div>
 			</div>
-			<div class="row disc-row">
+			<div class="row pd-row">
 				<div class="col-sm-6">
 					<h3 class="heading">Ellos</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum</p>
@@ -75,7 +77,7 @@
 					<img class="img-responsive" src="img/paul.png" alt="the beatles">
 				</div>
 			</div>
-			<div class="row disc-row">
+			<div class="row pd-row">
 				<div class="col-sm-6">
 					<h3 class="heading">Ellos</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum</p>
@@ -84,7 +86,7 @@
 					<img class="img-responsive" src="img/george.png" alt="the beatles">
 				</div>
 			</div>
-			<div class="row disc-row">
+			<div class="row pd-row">
 				<div class="col-sm-6">
 					<h3 class="heading">Ellos</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum</p>
@@ -103,32 +105,46 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum</p>
 				</div>
 			</div>
-			<div class="row disc-row">
+			<div class="row pd-row">
 				<div class="col-sm-4"><img class="img-responsive" src="img/please-me.jpg" alt="Please me"></div>
 				<div class="col-sm-4"><img class="img-responsive" src="img/with-beatles.jpg" alt="With The Beatles"></div>
 				<div class="col-sm-4"><img class="img-responsive" src="img/hard-days.jpg" alt="A hard days night"></div>
 			</div>
-			<div class="row disc-row">
+			<div class="row pd-row">
 				<div class="col-sm-4"><img class="img-responsive" src="img/beatles-sale.jpg" alt="beatles for sale"></div>
 				<div class="col-sm-4"><img class="img-responsive" src="img/help.jpg" alt="Help"></div>
 				<div class="col-sm-4"><img class="img-responsive" src="img/rubber.jpg" alt="Rubber Soul"></div>
 			</div>
-			<div class="row disc-row">
+			<div class="row pd-row">
 				<div class="col-sm-4"><img class="img-responsive" src="img/revolver.jpg" alt="Revolver"></div>
 				<div class="col-sm-4"><img class="img-responsive" src="img/peppers.jpg" alt="Lonely Hearts Club Band"></div>
 				<div class="col-sm-4"><img class="img-responsive" src="img/magical.jpg" alt="Magical Mystery Tour"></div>
 			</div>
-			<div class="row disc-row">
+			<div class="row pd-row">
 				<div class="col-sm-4"><img class="img-responsive" src="img/white.jpg" alt="The White Album"></div>
 				<div class="col-sm-4"><img class="img-responsive" src="img/yellow.jpg" alt="Yellow Submarine"></div>
 				<div class="col-sm-4"><img class="img-responsive" src="img/abbey.jpg" alt="Abbey Road"></div>
 			</div>
-			<div class="row disc-row">
+			<div class="row pd-row">
 				<div class="col-sm-4 col-sm-offset-4"><img class="img-responsive" src="img/let-it-be.jpg" alt="Let it Be"></div>
 				<!-- <div class="col-sm-4"><img class="img-responsive" src="img/let-it-be.jpg" alt="Let it Be"></div> -->
 			</div>
 		</div>
 	</section>
+	<footer id="final">
+		<div class="overlay">
+			<div class="container pd">
+				<p class="pd-row">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni blanditiis consectetur ex non numquam placeat est quis cupiditate illo quas incidunt modi quam temporibus sint, ducimus cumque ipsa ea deserunt.</p>
+				<p class="text-center">
+					<a target="_blank" href=""><i class=""></i></a>
+					<a target="_blank" href=""></a>
+					<a target="_blank" href=""></a>
+					<a target="_blank" href=""></a>
+					<a target="_blank" href=""></a>
+				</p>
+			</div>
+		</div>
+	</footer>
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 </body>
