--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link type="text/css" rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="shortcut icon" href="img/favicon.png">
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="150">
 	<header id="intro">
