distribucion de columnas

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 col-sm-12">
-							<h1>The Beatles</h1>
+							<h1 class="text-right">The Beatles</h1>
 							<p class="text-right">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam natus dolorum at atque enim suscipit quidem voluptate, debitis neque dignissimos quo quasi consequatur mollitia recusandae officia maiores obcaecati. Doloribus, deserunt?</p>						
 						</div>
 					</div>
@@ -53,10 +53,22 @@
 	<section id="resenia" class="pd">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-6 col-xs-12">
+				<div class="col-xs-12">
 					<h3 class="heading">Reseña</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi sunt quidem, accusantium corporis modi, iusto repudiandae quas rem saepe nostrum repellat a tempore dolorem voluptas, debitis impedit! Quae, omnis, dolorum</p>
 				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-4">
+					<img class="img-responsive" src="img/john.png" alt="the beatles">
+				</div>
+				<div class="col-xs-4">
+					<img class="img-responsive" src="img/john.png" alt="the beatles">
+				</div>
+				<div class="col-xs-4">
+					<img class="img-responsive" src="img/john.png" alt="the beatles">
+				</div>
+			</div>
 			</div>
 		</div>
 	</section>
